src/297D-he1-052114/martin/output-martin.txt
src\martin\MakeChange.java:1: error: class Change is public, should be declared in a file named Change.java
public class Change
       ^
src\martin\TestProgram.java:18: error: cannot find symbol
    MakeChange program = new MakeChange();
    ^
  symbol:   class MakeChange
  location: class TestProgram
src\martin\TestProgram.java:18: error: cannot find symbol
    MakeChange program = new MakeChange();
                             ^
  symbol:   class MakeChange
  location: class TestProgram
3 errors
Error: Could not find or load main class SwapLetters
Error: Could not find or load main class SwapLetters
Error: Could not find or load main class SwapLetters
Error: Could not find or load main class MakeChange
Error: Could not find or load main class MakeChange
Error: Could not find or load main class MakeChange
